tests/ui/traits/next-solver/normalization-shadowing/normalizes_to_ignores_unnormalizable_candidate.stderr
error[E0284]: type annotations needed: cannot satisfy `<Vec<_> as Trait>::Assoc normalizes-to u8`
  --> $DIR/normalizes_to_ignores_unnormalizable_candidate.rs:25:5
   |
LL |     foo(unconstrained())
   |     ^^^^^^^^^^^^^^^^^^^^ cannot satisfy `<Vec<_> as Trait>::Assoc normalizes-to u8`
   |
note: required by a bound in `foo`
  --> $DIR/normalizes_to_ignores_unnormalizable_candidate.rs:14:17
   |
LL | fn foo<T: Trait<Assoc = u8>>(x: T) {}
   |                 ^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
